@@ -85,7 +85,7 @@ inline void syx_exec_state_free (void);
     }
 
 //! The number of primitives
-#define SYX_PRIMITIVES_MAX 85
+#define SYX_PRIMITIVES_MAX 86
 
 typedef syx_bool (* SyxPrimitiveFunc) (SyxExecState *es, SyxOop method);
 #define SYX_FUNC_PRIMITIVE(name)					\
